<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application String -->
    <string name="app_name">Classified!</string>

    <!-- Activity Title Strings -->
    <string name="title_activity_comments_view">Comments</string>
    <string name="title_activity_posts_view">Posts</string>
    <string name="title_activity_demo_post">DemoPost</string>
    <string name="title_activity_demo_keys">DemoKeys</string>
    <string name="title_activity_demo_xkeys">DemoXKeys</string>
    <string name="title_activity_classified_chat_rooms">Chat Rooms</string>
    <string name="title_activity_create_chat_room">Create Chat Room</string>
    <string name="title_activity_chat_room_detail">Chat Room</string>
    <string name="title_activity_create_post">Add Post</string>
    <string name="title_activity_users">Users</string>
    <string name="title_activity_add_user">Add User</string>

    <!-- Generic Strings -->
    <string name="blank" />
    <string name="name">Name</string>
    <string name="desc">Description</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="initiate">Initiate</string>
    <string name="verify_add_user_key">Verify Key</string>
    <string name="next">Next</string>
    <string name="refresh">Refresh</string>
    <string name="phone_number">Phone Number</string>
    <string name="host">Host</string>
    <string name="server">Server</string>
    <string name="port">Port</string>
    <string name="user_name">User Name</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="key">Key</string>
    <string name="share_secret">Share Secret</string>

    <!-- Common Strings -->
    <string name="posts_list">Posts</string>
    <string name="show_chat_room">Show Chat Room</string>
    <string name="join_chat_room">Join Chat Room</string>
    <string name="save_chat_room">Save Chat Room</string>
    <string name="view_users">View Users</string>
    <string name="add_user">Add User</string>
    <string name="view_post">View Post</string>
    <string name="add_comment">Add Comment</string>

    <!-- Unused Strings -->
    <!-- <string name="create_chat_room">Create Chat Room</string> -->
    <!-- <string name="add_post">Add Post</string> -->

    <string name="title_activity_update_profile">UpdateProfileActivity</string>

</resources>