<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cs9033.classified.ChatRoomDetailActivity" >

    <item
        android:id="@+id/chatroom_detail_menu_view_users"
        android:icon="@drawable/ic_action_group"
        android:showAsAction="always"
        android:title="@string/view_users"/>
    <item
        android:id="@+id/chatroom_detail_menu_add_user"
        android:icon="@drawable/ic_action_add_person"
        android:showAsAction="always"
        android:title="@string/add_user"/>
    <item
        android:id="@+id/chatroom_detail_menu_add_post"
        android:icon="@drawable/ic_action_chat"
        android:showAsAction="always"
        android:title="@string/title_activity_create_post"/>

</menu>