<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cs9033.classified.ChatRoomActivity" >

    <item
        android:id="@+id/classified_chat_rooms_menu_join_chatroom"
        android:icon="@drawable/ic_action_add_group"
        android:showAsAction="always"
        android:title="@string/join_chat_room"/>
    <item
        android:id="@+id/classified_chat_rooms_menu_create_chatroom"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/title_activity_create_chat_room"/>
    <item
        android:id="@+id/classified_chat_rooms_menu_my_profile"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="always"
        android:title="@string/title_activity_update_profile"/>

</menu>