<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cs9033.classified.MainActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/go_to_create_chat_room_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_create_chat_room" />

    <Button
        android:id="@+id/go_to_show_chat_room_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_chat_room" />

    <Button
        android:id="@+id/go_to_join_chat_room_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_chat_room" />

</LinearLayout>